--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💖 나의 100세 인생 로드맵 💖</title>
+    <title>💖 나의 인생 로드맵 💖</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -106,7 +106,7 @@
 
         <!-- Header -->
         <header class="text-center mb-10">
-            <h1 class="text-4xl md:text-5xl font-bold font-gaegu text-[#E15A82]">💖 나의 100세 인생 로드맵 💖</h1>
+            <h1 class="text-4xl md:text-5xl font-bold font-gaegu text-[#E15A82]">💖 나의 인생 로드맵 💖</h1>
             <p class="text-gray-500 mt-2">당신의 멋진 인생 계획을 세워보세요!</p>
         </header>
 
