--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         
         <!-- Name Input -->
         <div class="absolute top-4 right-4 md:top-8 md:right-8">
-            <input type="text" id="user-name" placeholder="이름을 입력하세요" class="text-right bg-transparent font-gaegu text-xl text-gray-600 border-b-2 border-pink-200 focus:outline-none focus:border-pink-400 w-40 transition">
+            <input type="text" id="user-name" placeholder="이름 입력" class="text-right bg-transparent font-gaegu text-xl text-gray-600 border-b-2 border-pink-200 focus:outline-none focus:border-pink-400 w-40 transition">
             <span id="user-name-display" class="hidden text-right bg-transparent font-gaegu text-xl text-gray-600 w-40 pr-[2px] pb-[2px]"></span>
         </div>
 
@@ -188,8 +188,8 @@
             let roadmapData = {};
 
             const decades = [
-                { id: 'past', title: '~10대 (과거)', subtitle: '나는 이런 경험을 했어요', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/1.png' },
-                { id: 'present', title: '현재 (고등학생)', subtitle: '지금 나는 무엇을 하고 있을까?', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/1.png' },
+                { id: 'past', title: '~지금까지의 나', subtitle: '나는 이런 경험을 했어요', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/1.png' },
+                { id: 'present', title: '10대 (현재)', subtitle: '지금 나는 무엇을 하고 있을까?', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/1.png' },
                 { id: 'd20s', title: '20대', subtitle: '반짝반짝 빛날 나의 20대', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/2.png' },
                 { id: 'd30s', title: '30대', subtitle: '전문가로 성장하는 30대', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/3.png' },
                 { id: 'd40s', title: '40대', subtitle: '인생의 새로운 장을 여는 40대', image: 'https://raw.githubusercontent.com/shineonyou1274/careerimage/43bb6758dc1e3bcb8f6b9fd9ca7fa267433158a6/4.png' },
